slightly better idea project. ant and jdk still must be set (corrected) manually.